--- a/src/main/resources/templates/busList.html
+++ b/src/main/resources/templates/busList.html
@@ -23,6 +23,11 @@
         .table-container h1 {
             color: #343a40;
         }
+        .greeting {
+            color: #007bff; /* Primary color for text */
+            text-align: center;
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -38,6 +43,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/addBus}"><h4>Add Bus</h4></a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/searchBus}"><h4>Search Bus</h4></a>
                 </li>
@@ -57,27 +65,36 @@
     </div>
 </nav>
 <br><br>
-
+<div class="container">
+    <h1 class="greeting"> <b >Hi, Welcome <span th:text ="*{userDetails}"></span></b> </h1>
+</div>
 <div class="container table-container">
     <h1 class="mt-5">All Buses</h1>
     <table class="table table-striped table-hover">
         <thead class="table bg-info text-white">
         <tr>
-            <th>Bus Number</th>
-            <th>From</th>
-            <th>To</th>
-            <th>Departure Time</th>
-            <th>Seats</th>
-            <th>Action</th>
+            <th scope="col">Id</th>
+            <th scope="col">Bus Number</th>
+            <th scope="col">From</th>
+            <th scope="col">To</th>
+            <th scope="col">Departure Time</th>
+            <th scope="col">Seats</th>
+            <th scope="col">Price</th>
+            <th scope="col">Date</th>
+            <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="bus : ${buses}">
+        <tr th:each="bus ,c: ${buses}">
+            <th scope="row">[[${c.count}]]</th>
             <td th:text="${bus.busNumber}"></td>
             <td th:text="${bus.fromDestination}"></td>
             <td th:text="${bus.toDestination}"></td>
             <td th:text="${bus.departureTime}"></td>
             <td th:text="${bus.availableSeats}"></td>
+            <td th:text="${bus.price}"></td>
+            <td th:text="${bus.date}"></td>
+
             <td>
                 <a th:href="@{/delete/{id}(id=${bus.id})}" class="btn btn-sm btn-danger">Delete</a>
             </td>
