--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -19,9 +19,12 @@
         .content-container {
             margin-top: 50px;
         }
-        .content-container h1 {
-            color: #343a40;
+        .greeting {
+            color: #007bff; /* Primary color for text */
+            text-align: center;
+            margin-top: 20px;
         }
+
     </style>
 </head>
 
@@ -37,6 +40,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/addBus}"><h4>Add Bus</h4></a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/searchBus}"><h4>Search Bus</h4></a>
                 </li>
@@ -56,29 +62,39 @@
     </div>
 </nav>
 <br><br>
+<div class="container">
+    <h1 class="greeting"> <b >Hi, Welcome <span th:text ="*{userDetails}"></span></b> </h1>
+</div>
 
-<div class="container content-container">
+<div class="container">
     <h1 class="mt-5">Search Results</h1>
 
-    </div>
+
     <table class="table table-striped table-bordered mt-3">
         <thead class="bg-info text-white">
         <tr>
-            <th>Bus Number</th>
-            <th>From</th>
-            <th>To</th>
-            <th>Departure Time</th>
-            <th>Available Seats</th>
-            <th>Action</th>
+            <th scope="col">Bus Id</th>
+            <th scope="col">Bus Number</th>
+            <th scope="col">From</th>
+            <th scope="col">To</th>
+            <th scope="col">Departure Time</th>
+            <th  scope="col">Available Seats</th>
+            <th  scope="col">Price</th>
+            <th  scope="col">Date</th>
+            <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="bus : ${buses}">
+        <tr th:each="bus,c : ${buses}">
+            <th scope="row">[[${c.count}]]</th>
             <td th:text="${bus.busNumber}"></td>
             <td th:text="${bus.fromDestination}"></td>
             <td th:text="${bus.toDestination}"></td>
             <td th:text="${bus.departureTime}"></td>
             <td th:text="${bus.availableSeats}"></td>
+            <td th:text="${bus.price}"></td>
+            <td th:text="${bus.date}"></td>
+
             <td>
                 <a th:href="@{/book(busId=${bus.id}, userId=1)}" class="btn btn-primary">Book</a>
             </td>
@@ -86,6 +102,7 @@
         </tbody>
     </table>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
